@@ -1,3 +1,8 @@
+2008-10-04  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/37706
+	* gfortran.dg/module_equivalence_4.f90: New test.
+
 2008-10-04  Richard Guenther  <rguenther@suse.de>
 
 	* gcc.dg/tree-ssa/ssa-pre-21.c: New testcase.
