@@ -1,3 +1,9 @@
+2008-10-04  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/37706
+	* module.c (load_equiv): Check the module before negating the
+	unused flag.
+
 2008-10-02  Steven Bosscher  <steven@gcc.gnu.org>
 
 	PR fortran/37635
